# mad-capstone

backend/: Cargo.toml  docker-compose.yml  justfile
backend/scripts/: seed.zsh
backend/src/: main.rs
backend/src/db/: init_db.rs  mod.rs  schema.prisma
backend/src/db/entities/: conversation.rs  conversation_message.rs  mod.rs  participant.rs  prelude.rs  user.rs
backend/src/router/: app_error.rs  auth.rs  cdn.rs  conversations.rs  mod.rs  users.rs
backend/src/router/auth/: login.rs  mod.rs  signup.rs
backend/src/router/cdn/: mod.rs  proxy.rs
backend/src/router/conversations/: conversations.rs  create_conversation.rs  create_message.rs  delete_conversation.rs  get_conversations.rs  get_messages.rs  messages.rs  mod.rs
backend/src/router/users/: find_user.rs  get_me.rs  mod.rs
backend/src/router/ws/: call_handler.rs  connect.rs  event_handler.rs  mod.rs
backend/src/util/: app_error.rs  authed_user.rs  jwt.rs  mod.rs
backend/src/ws/: call_state.rs  client_event.rs  conversation.rs  event.rs  incoming_event.rs  mod.rs  outgoing_event.rs  server_event.rs
client/: build.gradle.kts  settings.gradle.kts
client/app/: build.gradle.kts
client/app/src/androidTest/java/nl/hva/capstone/: ExampleInstrumentedTest.kt
client/app/src/androidTest/java/nl/hva/chatstone/: ExampleInstrumentedTest.kt
client/app/src/main/: AndroidManifest.xml
client/app/src/main/java/nl/hva/capstone/: CapstoneApp.kt  CapstoneApplication.kt  MainActivity.kt
client/app/src/main/java/nl/hva/chatstone/: ChatstoneApplication.kt
client/app/src/main/res/drawable/: hva.xml  ic_launcher_foreground.xml
client/app/src/main/res/values/: credentials.xml  notification_channels.xml  strings.xml  themes.xml
client/gradle/wrapper/: gradle-wrapper.properties
(+185 files in other folders)
