[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.2"
dotenvy = "0.15.7"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
typeshare = "1.0.1"
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
anyhow = "1.0.75"
just = "1.16.0"
bcrypt = "0.15.0"
serde_json = "1.0.108"
listenfd = "1.0.1"
jsonwebtoken = "9.2.0"
tower-http = "0.5.0"
