[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.2"
axum-extra = { version = "0.9.0", features = ["typed-header"] }
dotenvy = "0.15.7"
tokio = { version = "1.34.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
typeshare = "1.0.1"
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
anyhow = "1.0.75"
bcrypt = "0.15.0"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
jsonwebtoken = "9.2.0"
listenfd = "1.0.1"
tower-http = "0.5.0"
once_cell = "1.19.0"
chrono = "0.4.31"
futures = "0.3.29"
reqwest = "0.11.22"
lazy_static = "1.4.0"
